Java_Workshop/templates/openshift/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
  namespace: ${NAMESPACE}
spec:
  ports:
    - name: 4180-tcp
      protocol: TCP
      port: 4180
      targetPort: 4180
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: ${APPLICATION_NAME}
  sessionAffinity: None
  type: ClusterIP
