Java_Workshop/templates/openshift/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: route-${APPLICATION_NAME}
  name: route-${APPLICATION_NAME}
  namespace: ${NAMESPACE}
spec:
  port:
    targetPort: 4180-tcp
  tls:
    termination: edge	
  to:
    kind: Service
    name: ${APPLICATION_NAME}
    weight: 100
  wildcardPolicy: None
