Java_Workshop/templates/openshift/RouteHttps.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: route-${APPLICATION_NAME}
  name: route-${APPLICATION_NAME}
  namespace: ${NAMESPACE}
spec:
  port:
    targetPort: 8081-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: ${APPLICATION_NAME}
    weight: 100
  wildcardPolicy: None
